# keras-spectra

./: .gitignore  README.md  pyproject.toml
keras_spectra/: server.py
scripts/: build.sh
spectria-logger/src/spectria/logger/: writer.py
spectria_logger/: __init__.py  keras.py  server.py
src/spectria/: cli.py  server.py
